{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player_1",
            "id": "5ca53c8e-f541-48f6-b890-2d703b197b9b",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "2b48975f-2ba8-432e-abc8-0e1504fcd4ee",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "d6b7bd04-82f8-4d0c-9547-4d01a8064932",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BaseAttack",
                    "type": "Button",
                    "id": "23a60bcc-2dc9-455d-aa63-8e9fc48d4b1f",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PickUpItem",
                    "type": "Button",
                    "id": "f08fabc3-3ac9-4e0d-9351-a3e398dfb860",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UseItem",
                    "type": "Button",
                    "id": "d13dbf7b-b453-4b91-aaa2-420be83ff13f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollItemLeft",
                    "type": "Button",
                    "id": "6e3603ec-b42a-4aef-86c3-3446f11ee3c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ScrollItemRight",
                    "type": "Button",
                    "id": "87d34bbb-204c-44fd-bfac-47b4242ac59c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecAttackRight",
                    "type": "Button",
                    "id": "e419cea4-4353-49e2-a160-afbecccb63f3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecAttackLeft",
                    "type": "Button",
                    "id": "81d6467e-7a31-4edf-be4d-f80a0d29af3a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "0264c098-a2e3-4f04-b4e9-f97bbcf3142a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d85cf5df-89b5-4afb-957a-7bd1f70dbad8",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ef866e2d-2b93-459e-ae22-a96fcd994cc8",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "818ad912-351a-4501-8bf2-a888ae1e4945",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4ffdb2ff-b357-489a-a325-bb31e9e59b1e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "d8bf79fb-2282-4b75-bad1-7cd914ebba1f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "d26eb8fb-35e6-42c0-bccf-f0798576bc9b",
                    "path": "<SwitchProControllerHID>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "aeea35cb-f7f0-4ea2-9161-87804ceeecf7",
                    "path": "<SwitchProControllerHID>/leftStick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f5008292-2e0d-47d7-af27-5fea145fcb24",
                    "path": "<SwitchProControllerHID>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "dcc763c0-2edc-4812-b9dd-b957265276f5",
                    "path": "<SwitchProControllerHID>/leftStick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "c24f7576-3162-484e-88b4-a76c1a355b4b",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "131354de-cac6-4f7c-a449-9c0380d8fb0f",
                    "path": "<DualShockGamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3deadd39-13e1-4e94-8f06-3e257e4a1ec2",
                    "path": "<SwitchProControllerHID>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7a8de2aa-4a80-4445-a55b-d7a68f0ce7d8",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9a7a8f9-79ac-46e8-93f5-2a6245c340db",
                    "path": "<HID::Logitech Logitech Dual Action>/button2",
                    "interactions": "",
                    "processors": "",
                    "groups": "JoyStick",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e4a1a2af-f69e-4a9c-8243-9ebc2c796361",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "BaseAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f8d6f917-f175-422b-9d32-123d24ac7409",
                    "path": "<DualShockGamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "BaseAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8ccab777-9c2e-4f14-9e08-2a45f50d3a7a",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "BaseAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b5ca8b1-6eff-4058-8e02-ae6d32617f66",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "BaseAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "caec8026-6bec-4d6d-b947-09c124daaa4a",
                    "path": "<Joystick>/trigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "JoyStick",
                    "action": "BaseAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "28be3af3-ccc3-4974-be99-913db238702c",
                    "path": "<SwitchProControllerHID>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "BaseAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa9abe80-3bf5-4618-aaab-255b776ce704",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUpItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9009237a-abab-4c1c-af48-c26ef8d773a0",
                    "path": "<DualShockGamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PickUpItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60dd7132-7822-425f-9bdf-68fefa8fd2ca",
                    "path": "<SwitchProControllerHID>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "PickUpItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e4cfdad-7340-450d-b62d-d2a0b0837a7d",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "PickUpItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ef087eec-b535-4559-9217-4c831bb05124",
                    "path": "<HID::Logitech Logitech Dual Action>/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "JoyStick",
                    "action": "PickUpItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5174baff-2548-469f-a153-c93b30cc8e46",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dd46f0e-f440-40b0-837c-e1d2938b020f",
                    "path": "<DualShockGamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c13ae4c-317b-4b36-a55a-12c4ee7cd931",
                    "path": "<SwitchProControllerHID>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7d779feb-5858-449a-9d20-fa9271f30266",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "432985bc-0bac-4f14-ae5b-b83f80e364e3",
                    "path": "<HID::Logitech Logitech Dual Action>/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "JoyStick",
                    "action": "UseItem",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1e40243d-bf62-4439-8260-edb90b2bb718",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollItemLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "36b8b14d-1473-4dc3-9d4e-be72f022da6d",
                    "path": "<DualShockGamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollItemLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "39c41831-55d7-4bf0-978a-e4802f59f93b",
                    "path": "<SwitchProControllerHID>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "ScrollItemLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "16e93b71-994a-4ae8-942e-241bf9d80f6d",
                    "path": "<Keyboard>/comma",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ScrollItemLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f94171b4-0af0-44fa-a1ba-0e31f2d3b84c",
                    "path": "<HID::Logitech Logitech Dual Action>/button5",
                    "interactions": "",
                    "processors": "",
                    "groups": "JoyStick",
                    "action": "ScrollItemLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d48f6b5-20ed-4b12-9915-012167a8d722",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollItemRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9a85b21-a3d7-4ac6-84b5-bdcb746b2c5e",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ScrollItemRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a2265ed-fec9-4b97-9731-91b626bdb15a",
                    "path": "<SwitchProControllerHID>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "ScrollItemRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1bfc98cc-1c90-4864-beb3-59c587d7bc83",
                    "path": "<Keyboard>/period",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "ScrollItemRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b42b0e49-1f01-430b-8a0d-01babc34ec39",
                    "path": "<HID::Logitech Logitech Dual Action>/button6",
                    "interactions": "",
                    "processors": "",
                    "groups": "JoyStick",
                    "action": "ScrollItemRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "97cbb978-65f9-48ea-89d1-a40bc4f9d897",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecAttackRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "927ae558-b462-4946-a032-ba3589b45df8",
                    "path": "<HID::Logitech Logitech Dual Action>/button8",
                    "interactions": "",
                    "processors": "",
                    "groups": "JoyStick",
                    "action": "SpecAttackRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "afc90455-6627-48f2-a7ca-c9762f6a1b1b",
                    "path": "<Keyboard>/rightBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SpecAttackRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac057c0a-8ddd-4044-8b1f-95e404d1cd8c",
                    "path": "<SwitchProControllerHID>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "SpecAttackRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "252c9d41-db83-4f12-ad34-c9e5f484591a",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecAttackLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "beecb042-f14b-4df6-8f36-493e046066d3",
                    "path": "<HID::Logitech Logitech Dual Action>/button7",
                    "interactions": "",
                    "processors": "",
                    "groups": "JoyStick",
                    "action": "SpecAttackLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7dd32ba-230a-4b28-9b93-5f9e46e1241b",
                    "path": "<Keyboard>/leftBracket",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard",
                    "action": "SpecAttackLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9d743c00-9785-40a7-8f0e-b18b38c21480",
                    "path": "<SwitchProControllerHID>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": ";JoyStick",
                    "action": "SpecAttackLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard",
            "bindingGroup": "Keyboard",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "JoyStick",
            "bindingGroup": "JoyStick",
            "devices": [
                {
                    "devicePath": "<Joystick>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}